--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             <img class="right-bottom-angle" src="img/right-bottom-angle.svg" alt="icon">
                             <img class="left-bottom-angle" src="img/left-bottom-angle.svg" alt="icon">
                         </div>
-                        <div class="product product-4">
+                        <div class="product">
                             <img class="left-top-angle" src="img/left-top-angle.svg" alt="icon">
                             <img class="right-top-angle" src="img/right-top-angle.svg" alt="icon">
                             <img src="/img/man.png" alt="Image" class="product-image">
