--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <p class="price-old">9 900 ₽</p>
                         <p class="price-new">1 900 ₽</p>
                     </div>
-                    <img class="product-image" src="img/running_shoes_PNG5823.png" alt="Shoe">
+                    <img class="sale-product-image" src="img/running_shoes_PNG5823.png" alt="Shoe">
                 </div>
             </div>
         </div>
@@ -93,7 +93,7 @@
                         <div class="product">
                             <img class="left-top-angle" src="img/left-top-angle.svg" alt="icon">
                             <img class="right-top-angle" src="img/right-top-angle.svg" alt="icon">
-                            <img src="/img/woman.png" alt="Image" class="product-image">
+                            <img src="img/woman.png" alt="Image" class="product-image">
                             <p class="product-description">Коктейльное платье</p>
                             <p class="product-price">₽ 40 000</p>
                             <img class="right-bottom-angle" src="img/right-bottom-angle.svg" alt="icon">
@@ -102,7 +102,7 @@
                         <div class="product">
                             <img class="left-top-angle" src="img/left-top-angle.svg" alt="icon">
                             <img class="right-top-angle" src="img/right-top-angle.svg" alt="icon">
-                            <img src="/img/man.png" alt="Image" class="product-image">
+                            <img src="img/man.png" alt="Image" class="product-image">
                             <p class="product-description">Футболка черная</p>
                             <p class="product-price">₽ 10 000</p>
                             <img class="right-bottom-angle" src="img/right-bottom-angle.svg" alt="icon">
@@ -115,7 +115,7 @@
                         <div class="product">
                             <img class="left-top-angle" src="img/left-top-angle.svg" alt="icon">
                             <img class="right-top-angle" src="img/right-top-angle.svg" alt="icon">
-                            <img src="/img/woman.png" alt="Image" class="product-image">
+                            <img src="img/woman.png" alt="Image" class="product-image">
                             <p class="product-description">Коктейльное платье</p>
                             <p class="product-price">₽ 40 000</p>
                             <img class="right-bottom-angle" src="img/right-bottom-angle.svg" alt="icon">
@@ -124,7 +124,7 @@
                         <div class="product">
                             <img class="left-top-angle" src="img/left-top-angle.svg" alt="icon">
                             <img class="right-top-angle" src="img/right-top-angle.svg" alt="icon">
-                            <img src="/img/man.png" alt="Image" class="product-image">
+                            <img src="img/man.png" alt="Image" class="product-image">
                             <p class="product-description">Футболка черная</p>
                             <p class="product-price">₽ 10 000</p>
                             <img class="right-bottom-angle" src="img/right-bottom-angle.svg" alt="icon">
@@ -204,7 +204,6 @@
     </div>
 
     <script src="js/modal.js"></script>
-
 
 
 
