--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <header class="header">
                 <nav>
                     <ul class="nav">
-                        <li class="nav-item"> <a class="nav-link" href="#">Для мужчин</a><img class="polygon-icon"
+                        <li class="nav-item"> <a class="nav-link" href="#">Для чоловіків</a><img class="polygon-icon"
                                 src="img/Polygon.svg" alt="Icon"></li>
-                        <li class="nav-item"> <a class="nav-link" href="#">Для женщин</a><img class="polygon-icon"
+                        <li class="nav-item"> <a class="nav-link" href="#">Для жінок</a><img class="polygon-icon"
                                 src="img/Polygon.svg" alt="Icon"></li>
-                        <li class="nav-item"> <a class="nav-link" href="#">Для детей</a><img class="polygon-icon"
+                        <li class="nav-item"> <a class="nav-link" href="#">Для дітей</a><img class="polygon-icon"
                                 src="img/Polygon.svg" alt="Icon"></li>
                     </ul>
                 </nav>
@@ -42,14 +42,14 @@
             </header>
             <div class="sale-section">
                 <div class="sale-info sale-item">
-                    <p class="sale-description">Зимняя распродажа</p>
+                    <p class="sale-description">Зимовий розпродаж</p>
                     <h1 class="sale-title">СКИДКИ ДО 90%</h1>
-                    <a class="button" href="#">СМОТРЕТЬ МОДЕЛИ</a>
+                    <a class="button" href="#">ДИВИТИСЬ МОДЕЛІ</a>
                 </div>
                 <div class="sale-product sale-item">
                     <div class="sale-price">
-                        <p class="price-old">9 900 ₽</p>
-                        <p class="price-new">1 900 ₽</p>
+                        <p class="price-old">3 000 UAH</p>
+                        <p class="price-new">2 500 UAH</p>
                     </div>
                     <img class="sale-product-image" src="img/running_shoes_PNG5823.png" alt="Shoe">
                 </div>
@@ -59,8 +59,8 @@
     <div class="page-dark">
         <div class="wrapper">
             <div class="mid-section-top">
-                <p class="cta-description"><span class="cta-span">БЕСПЛАТНАЯ ДОСТАВКА</span> ОТ 3000₽</p>
-                <p class="cta">Сделайте заказ и получите подарок!</p>
+                <p class="cta-description"><span class="cta-span">БЕЗКОШТОВНА ДОСТАВКА</span> ВІД 1500 UAH</p>
+                <p class="cta">Зробіть замовлення та отримайте подарунок!</p>
             </div>
         </div>
     </div>
@@ -69,16 +69,14 @@
             <div class="mid-section-mid">
                 <div class="collection-box">
                     <div class="male-collection-box collection-item">
-                        <p class="collection-title"><span class="collection-title-accent">МУЖСКАЯ </span>КОЛЛЕКЦИЯ</p>
-                        <p class="collection-description">Обувь, пуловеры, костюмы</p>
+                        <p class="collection-title"><span class="collection-title-accent">ЧОЛОВІЧА </span>КОЛЕКЦІЯ</p>
+                        <p class="collection-description">Взуття, пуловери, костюми</p>
                         <a href="#" class="button-arrow"><span class="arrow-icon">&rarr;</span></a>
-                        <!-- <a href="#" class="button-arrow"><img src="img/right-arrow-icon.svg" alt="Arrow" class="arrow-icon"></a> -->
                     </div>
                     <div class="female-collection-box collection-item">
-                        <p class="collection-title"><span class="collection-title-accent">ЖЕНСКАЯ </span>КОЛЛЕКЦИЯ</p>
-                        <p class="collection-description">Обувь, пуловеры, костюмы</p>
+                        <p class="collection-title"><span class="collection-title-accent">ЖІНОЧА </span>КОЛЕКЦІЯ</p>
+                        <p class="collection-description">Взуття, пуловери, костюми</p>
                         <a href="#" class="button-arrow"><span class="arrow-icon">&rarr;</span></a>
-                        <!-- <a href="#" class="button-arrow"><img src="img/right-arrow-icon.svg" alt="Arrow" class="arrow-icon"></a> -->
                     </div>
                 </div>
             </div>
@@ -87,15 +85,15 @@
     <div class="page mid-section-bottom">
         <div class="wrapper">
             <div class="product-container">
-                <h1 class="product-container-title">НОВЫЕ МОДЕЛИ</h1>
+                <h1 class="product-container-title">НОВІ МОДЕЛІ</h1>
                 <div class="product-box">
                     <div class="product-half-box">
                         <div class="product">
                             <img class="left-top-angle" src="img/left-top-angle.svg" alt="icon">
                             <img class="right-top-angle" src="img/right-top-angle.svg" alt="icon">
                             <img src="img/woman.png" alt="Image" class="product-image">
-                            <p class="product-description">Коктейльное платье</p>
-                            <p class="product-price">₽ 40 000</p>
+                            <p class="product-description">Коктейльна сукня</p>
+                            <p class="product-price">5 000 UAH</p>
                             <img class="right-bottom-angle" src="img/right-bottom-angle.svg" alt="icon">
                             <img class="left-bottom-angle" src="img/left-bottom-angle.svg" alt="icon">
                         </div>
@@ -103,8 +101,8 @@
                             <img class="left-top-angle" src="img/left-top-angle.svg" alt="icon">
                             <img class="right-top-angle" src="img/right-top-angle.svg" alt="icon">
                             <img src="img/man.png" alt="Image" class="product-image">
-                            <p class="product-description">Футболка черная</p>
-                            <p class="product-price">₽ 10 000</p>
+                            <p class="product-description">Футболка чорна</p>
+                            <p class="product-price">1 500 UAH</p>
                             <img class="right-bottom-angle" src="img/right-bottom-angle.svg" alt="icon">
                             <img class="left-bottom-angle" src="img/left-bottom-angle.svg" alt="icon">
                         </div>
@@ -116,8 +114,8 @@
                             <img class="left-top-angle" src="img/left-top-angle.svg" alt="icon">
                             <img class="right-top-angle" src="img/right-top-angle.svg" alt="icon">
                             <img src="img/woman.png" alt="Image" class="product-image">
-                            <p class="product-description">Коктейльное платье</p>
-                            <p class="product-price">₽ 40 000</p>
+                            <p class="product-description">Коктейльна сукня</p>
+                            <p class="product-price">5 000 UAH</p>
                             <img class="right-bottom-angle" src="img/right-bottom-angle.svg" alt="icon">
                             <img class="left-bottom-angle" src="img/left-bottom-angle.svg" alt="icon">
                         </div>
@@ -125,15 +123,15 @@
                             <img class="left-top-angle" src="img/left-top-angle.svg" alt="icon">
                             <img class="right-top-angle" src="img/right-top-angle.svg" alt="icon">
                             <img src="img/man.png" alt="Image" class="product-image">
-                            <p class="product-description">Футболка черная</p>
-                            <p class="product-price">₽ 10 000</p>
+                            <p class="product-description">Футболка чорна</p>
+                            <p class="product-price">1 500 UAH</p>
                             <img class="right-bottom-angle" src="img/right-bottom-angle.svg" alt="icon">
                             <img class="left-bottom-angle" src="img/left-bottom-angle.svg" alt="icon">
                         </div>
                     </div>
 
                 </div>
-                <a href="#" class="button button-models">ВСЕ МОДЕЛИ <span>&rarr;</span></a>
+                <a href="#" class="button button-models">ВСІ МОДЕЛІ <span>&rarr;</span></a>
             </div>
         </div>
     </div>
@@ -145,33 +143,32 @@
                 </div>
                 <div class="footer-nav">
                     <ul class="footer-list">
-                        <li class="footer-list-item"><a class="footer-list-link footer-list-title" href="#">ОСНОВНЫЕ
-                                ССЫЛКИ</a></li>
-                        <li class="footer-list-item"><a class="footer-list-link" href="#">О компании</a></li>
+                        <li class="footer-list-item"><a class="footer-list-link footer-list-title" href="#">ОСНОВНІ
+                                ПОСИЛАННЯ</a></li>
+                        <li class="footer-list-item"><a class="footer-list-link" href="#">Про компанію</a></li>
                         <li class="footer-list-item"><a class="footer-list-link" href="#">Каталог</a></li>
                         <li class="footer-list-item"><a class="footer-list-link" href="#">Доставка</a></li>
                         <li class="footer-list-item"><a class="footer-list-link" href="#">Оплата</a></li>
                     </ul>
                     <ul class="footer-list">
                         <li class="footer-list-item"><a class="footer-list-link footer-list-title"
-                                href="#">КАТЕГОРИИ</a></li>
-                        <li class="footer-list-item"><a class="footer-list-link" href="#">Мужская одежда</a></li>
-                        <li class="footer-list-item"><a class="footer-list-link" href="#">Женская одежда</a></li>
-                        <li class="footer-list-item"><a class="footer-list-link" href="#">Детская одежда</a></li>
-                        <li class="footer-list-item"><a class="footer-list-link" href="#">Для животных</a></li>
+                                href="#">КАТЕГОРІЇ</a></li>
+                        <li class="footer-list-item"><a class="footer-list-link" href="#">Чоловічий одяг</a></li>
+                        <li class="footer-list-item"><a class="footer-list-link" href="#">Жіночий одяг</a></li>
+                        <li class="footer-list-item"><a class="footer-list-link" href="#">Дитячий одяг</a></li>
+                        <li class="footer-list-item"><a class="footer-list-link" href="#">Для тварин</a></li>
                     </ul>
                     <ul class="footer-list">
-                        <li class="footer-list-item"><a class="footer-list-link footer-list-title" href="#">ПОЛЕЗНЫЕ
-                                ССЫЛКИ</a></li>
-                        <li class="footer-list-item"><a class="footer-list-link" href="#">Таблица размеров</a></li>
-                        <li class="footer-list-item"><a class="footer-list-link" href="#">Блог о моде</a></li>
-                        <li class="footer-list-item"><a class="footer-list-link" href="#">Наша миссия</a></li>
+                        <li class="footer-list-item"><a class="footer-list-link footer-list-title" href="#">КОРИСНІ
+                                ПОСИЛАННЯ</a></li>
+                        <li class="footer-list-item"><a class="footer-list-link" href="#">Таблиця розмірів</a></li>
+                        <li class="footer-list-item"><a class="footer-list-link" href="#">Блог про моду</a></li>
+                        <li class="footer-list-item"><a class="footer-list-link" href="#">Наша місія</a></li>
                     </ul>
                     <ul class="footer-list">
-                        <li class="footer-list-item"><a class="footer-list-link footer-list-title" href="#">СОЦ СЕТИ</a>
+                        <li class="footer-list-item"><a class="footer-list-link footer-list-title" href="#">СОЦ
+                                МЕРЕЖІ</a>
                         </li>
-                        <li class="footer-list-item"><img class="social-icon" src="img/vk.svg" alt="Icon"><a
-                                class="footer-list-link footer-link-text" href="#"> VK.com</a></li>
                         <li class="footer-list-item"><img class="social-icon" src="img/fb.svg" alt="Icon"><a
                                 class="footer-list-link footer-link-text" href="#"> Facebook</a></li>
                         <li class="footer-list-item"><img class="social-icon" src="img/insta.svg" alt="Icon"><a
@@ -186,13 +183,13 @@
             <img class="modal-close-icon" src="img/close-icon.svg" alt="icon">
         </div>
         <div class="modal-link-box">
-            <a class="modal-link" href="#">Для мужчин</a>
+            <a class="modal-link" href="#">Для чоловіків</a>
         </div>
         <div class="modal-link-box">
-            <a class="modal-link" href="#">Для женщин</a>
+            <a class="modal-link" href="#">Для жінок</a>
         </div>
         <div class="modal-link-box">
-            <a class="modal-link" href="#">Для детей</a>
+            <a class="modal-link" href="#">Для дітей</a>
         </div>
         <div class="modal-link-box">
             <a class="modal-link" href="#">Оплата</a>
